# pot-toolkit

./: .clang-format  .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.base  Dockerfile.iperf  Dockerfile.multistage  README.md  TODO.md  container_keys.txt  docker-compose.yaml  keys.txt  log.txt  logs.txt  main.c  meson.build  segment_list.txt  test  test.txt
conf/: node.ini  topology.ini
config/: docker-compose.yaml  node_config.json
docs/: rules.md
include/: common.h  crypto.h  crypto_utils.h  dpdk_utils.h  forward.h  headers.h  init.h  latency.h  packet_utils.h  port.h  pot.h  pprocess.h
include/core/: init.h  nodemng.h  pverify.h
include/dataplane/: forward.h  headers.h
include/node/: controller.h  egress.h  ingress.h  node_interface.h  transit.h
include/pot/: pot.h
include/routing/: routecontroller.h
include/security/: crypto.h
include/utils/: common.h  config.h  debug.h  logging.h  role.h  utils.h
make/: dpdk-pot.yaml
make/prepare/: configs.py  docker-compose.py  globals.py  prepare.py
make/scripts/: cleanup_ovs_ingress_test.sh  deploy.sh  generate-segment-list.sh  ovs-dpdk-setup.sh  plot.py  run-experiment.sh  run_ingress_container_test.sh  setup-container-veth.sh  setup-dpdk.sh  setup-port.sh  setup_ovs_ingress_test.sh  vhost-config.sh
scripts/: aws_bootstrap.sh  grabber.sh
src/: .pprocess.c.swp  common.c  config_loader.c  crypto.c  crypto_utils.c  dpdk_utils.c  forward.c  headers.c  init.c  latency.c  packet_utils.c  port.c  pprocess.c
src/core/: init.c  pverify.c
src/dataplane/: forward.c  headers.c
(+109 files in other folders)
